--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Seth Russell
-#logo: /assets/img/headshot
+logo: /assets/img/headshot
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
