--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Seth Russell
-logo: "Russell_headshot_small.jpg"
+logo: "docs/assets/Russell_headshot_small.jpg"
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
