--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Seth Russell
-logo: assets/img//Russell_headshot_small
+logo: "/assets/img//Russell_headshot_small.jpg?raw=true"
 #description: text below image
 show_downloads: true
 theme: jekyll-theme-minimal
