--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 title: Seth Russell
 show_downloads: ["true"]
-remote_theme: pages-themes/time-machine@v0.2.0
-plugins: jekyll-remote-theme # add this line to the plugins list if you already have one
+theme: time-machine
 
